--- a/style.css
+++ b/style.css
@@ -1,32 +1,72 @@
 body{
+    background-color: rgb(96, 175, 175);
     align-items: center;
     justify-content: center;
-    display: flex;
     flex-direction: column;
-    background-color: azure;
+    display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.main-section {
+    display: block;
+    padding: 20px 0;
+}
+.perfil{
+    display: block;
 }
 .imagem{
     border-radius: 50%;
     width: 200px;
 }
 .text1{
-    justify-content: center;
     text-align: center;
+    color: antiquewhite;
 }
-
-.Box{
+.double-section{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+.tent{
+   display: block;
+}
+.Box1{
+    background: url(https://i.pinimg.com/564x/b2/40/f7/b240f7c5698a11809c1d72539935fb9d.jpg);
+    border-radius: 30px;
+    background-position: 50%;
+    background-repeat: no-repeat;
     border-radius: 30px;
     width: 300px;
     height: 300px;
-    background-color: violet;
-    margin-bottom: 50px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-bottom: 40px;
+}
+.Box2{
+    background: url(https://i.pinimg.com/564x/4e/2d/3b/4e2d3b4b3496e056421b96b8ca834e51.jpg);
+    border-radius: 30px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    border-radius: 30px;
+    width: 300px;
+    height: 300px;
+    margin-bottom: 40px;
+}
+.Box3{
+    background: url(https://i.pinimg.com/564x/2c/11/2b/2c112b27b87cef3f8fed9007c260450e.jpg);
+    border-radius: 30px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 300px;
 }
 .text2{
     justify-content: center;
     text-align: center;
-    margin-top: 250px;
+    color: rgb(71, 42, 42);
 }
-@media (max-width: 440px){.Box{}}
-@media (min-width: 760px){.Box{}}
+@media(max-width: 375px){body{background-color: rgb(75, 37, 37);}}
+@media(min-width: 760px){body{background-color: rgb(112, 71, 71);}
+.main-section{display: flex; align-items: center;}
+.text1{margin-left: 30px;}
+.tent{display: flex;}
+.Box1{margin-right: 80px;}
+.Box2{margin-right: 80px;}
+.text2{margin-top: 250px;}}
